--- a/tasks/base-server/4-unattended-upgrades.yml
+++ b/tasks/base-server/4-unattended-upgrades.yml
@@ -6,7 +6,7 @@
         dest: /etc/apt/apt.conf.d/20auto-upgrades
         owner: "{{ user_name }}"
         group: "{{ user_name }}"
-    
+
     - name: unattended-upgrades | Ubuntu | copying 50unattended-upgrades file
       copy:
         src: files/unattended-upgrades/ubuntu-50unattended-upgrades
@@ -22,22 +22,44 @@
         owner: "{{ user_name }}"
         group: "{{ user_name }}"
       when: ansible_distribution == "Debian"
-    
-    - name: unattended-upgrades | Debian | apt-daily.timer | copying override.conf
-      copy:
-        src: files/unattended-upgrades/debian-daily.update.timer-override.conf
-        dest: /etc/systemd/system/apt-daily.timer.d/override.conf
+
+    - name: unattended-upgrades | Debian | creating apt-daily.timer.d and apt-daily-upgrade directories
+      file:
+        dest: "{{ item }}"
+        state: directory
         owner: "{{ user_name }}"
         group: "{{ user_name }}"
-    
-    - name: unattended-upgrades | Debian | apt-daily-upgrade.timer | copying override.conf
+      loop:
+        - /etc/systemd/system/apt-daily.timer.d/
+        - /etc/systemd/system/apt-daily-upgrade.timer.d/
+      when: ansible_distribution == "Debian"
+
+    - name: unattended-upgrades | Debian | copying override.conf files
       copy:
-        src: files/unattended-upgrades/debian-daily-upgrade.timer-override.conf
-        dest: /etc/systemd/system/apt-daily-upgrade.timer.d/override.conf
+        src: "{{ item.src }}" 
+        dest: "{{ item.dest }}" 
         owner: "{{ user_name }}"
         group: "{{ user_name }}"
+      loop:
+        - src: files/unattended-upgrades/debian-daily.update.timer-override.conf
+          dest: /etc/systemd/system/apt-daily.timer.d/override.conf
+        - src: files/unattended-upgrades/debian-daily.upgrade.timer-override.conf
+          dest: /etc/systemd/system/apt-daily-upgrade.timer.d/override.conf
+      when: ansible_distribution == "Debian"
+
+    - name: unattended-upgrade | Debian | systemctl daemon-reload
+      shell: sudo systemctl daemon-reload
+      when: ansible_distribution == "Debian"
 
     - name: unattended-upgrades | restarting service
       service:
         name: unattended-upgrades
-        state: restarted 
+        state: restarted
+    
+    - name: unattended-upgrades | apt-timers | query
+      shell: systemctl --all list-timers apt-daily{,-upgrade}.timer | awk 'FNR==2, FNR==3 {print $15"\t"$1"\t"$2"\t"$3"\t"$4"\t"$5"\t"$6"\t"$7}' | column -t
+      register: apt_timer_results
+
+    - name: unattended_upgrades | apt-timers | show results
+      debug:
+        msg: -"{{ apt_timer_results }}"
